--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^16.1.0",
+    "resend": "^6.7.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
